minor details in output wording

--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,40 +25,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "max games = 5\n",
       "min games to win 3\n",
       "\n",
       "\n",
-      "Enter 'rock', 'paper' or 'scissors': rock\n",
+      "Enter 'rock', 'paper' or 'scissors': paper\n",
       "Game # 1 \n",
+      "player: paper \n",
+      "machine: rock\n",
+      "player wins\n",
+      "machineWins: 0 playerWins: 1\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper' or 'scissors': rock\n",
+      "Game # 2 \n",
       "player: rock \n",
-      "machine: paper\n",
-      "machine wins\n",
-      "machineWins: 1 playerWins: 0\n",
+      "machine: rock\n",
+      "tie\n",
+      "machineWins: 0 playerWins: 1\n",
       "\n",
       "\n",
       "Enter 'rock', 'paper' or 'scissors': paper\n",
-      "Game # 2 \n",
-      "player: paper \n",
-      "machine: scissors\n",
-      "machine wins\n",
-      "machineWins: 2 playerWins: 0\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper' or 'scissors': rock\n",
       "Game # 3 \n",
-      "player: rock \n",
-      "machine: paper\n",
-      "machine wins\n",
-      "machineWins: 3 playerWins: 0\n",
+      "player: paper \n",
+      "machine: rock\n",
+      "player wins\n",
+      "machineWins: 0 playerWins: 2\n",
       "\n",
-      "Machine prevailed\n"
+      "\n",
+      "Enter 'rock', 'paper' or 'scissors': scissors\n",
+      "Game # 4 \n",
+      "player: scissors \n",
+      "machine: scissors\n",
+      "tie\n",
+      "machineWins: 0 playerWins: 2\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper' or 'scissors': scissors\n",
+      "Game # 5 \n",
+      "player: scissors \n",
+      "machine: rock\n",
+      "machine wins\n",
+      "machineWins: 1 playerWins: 2\n",
+      "\n",
+      "Not enough wins from either side\n"
      ]
     }
    ],
@@ -73,6 +90,7 @@
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "maxGames = 5\n",
+    "print('max games =', maxGames)\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
@@ -116,7 +134,7 @@
     "    if combatOutcome == 0:\n",
     "        print('tie')\n",
     "    elif combatOutcome == 2:\n",
-    "        print('human wins')\n",
+    "        print('player wins')\n",
     "    elif combatOutcome ==1:\n",
     "        print('machine wins')\n",
     "    \n",
@@ -181,21 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter max number of games (number should be odd): 8\n",
       "Enter max number of games (number should be odd): 7\n",
       "min games to win 4\n",
       "\n",
       "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': roc\n",
+      "Please check your spelling\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
       "Game # 1 \n",
-      "player: spock \n",
-      "machine: paper\n",
+      "player: rock \n",
+      "machine: spock\n",
       "machine wins\n",
       "machineWins: 1 playerWins: 0\n",
       "\n",
@@ -203,51 +224,43 @@
       "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
       "Game # 2 \n",
       "player: rock \n",
-      "machine: rock\n",
-      "tie\n",
-      "machineWins: 1 playerWins: 0\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': paper\n",
-      "Game # 3 \n",
-      "player: paper \n",
-      "machine: lizard\n",
+      "machine: spock\n",
       "machine wins\n",
       "machineWins: 2 playerWins: 0\n",
       "\n",
       "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': paper\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
+      "Game # 3 \n",
+      "player: spock \n",
+      "machine: lizard\n",
+      "machine wins\n",
+      "machineWins: 3 playerWins: 0\n",
+      "\n",
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': spock\n",
       "Game # 4 \n",
-      "player: paper \n",
+      "player: spock \n",
       "machine: spock\n",
-      "human wins\n",
-      "machineWins: 2 playerWins: 1\n",
+      "tie\n",
+      "machineWins: 3 playerWins: 0\n",
       "\n",
       "\n",
       "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': lizard\n",
       "Game # 5 \n",
       "player: lizard \n",
-      "machine: scissors\n",
-      "machine wins\n",
-      "machineWins: 3 playerWins: 1\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': scissors\n",
-      "Game # 6 \n",
-      "player: scissors \n",
-      "machine: paper\n",
-      "human wins\n",
-      "machineWins: 3 playerWins: 2\n",
-      "\n",
-      "\n",
-      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': rock\n",
-      "Game # 7 \n",
-      "player: rock \n",
-      "machine: rock\n",
+      "machine: lizard\n",
       "tie\n",
-      "machineWins: 3 playerWins: 2\n",
+      "machineWins: 3 playerWins: 0\n",
       "\n",
-      "Not enough wins from either side\n"
+      "\n",
+      "Enter 'rock', 'paper', 'scissors', 'lizard' or 'spock': paper\n",
+      "Game # 6 \n",
+      "player: paper \n",
+      "machine: lizard\n",
+      "machine wins\n",
+      "machineWins: 4 playerWins: 0\n",
+      "\n",
+      "Machine prevailed\n"
      ]
     }
    ],
@@ -319,7 +332,7 @@
     "    if combatOutcome == 0:\n",
     "        print('tie')\n",
     "    elif combatOutcome == 2:\n",
-    "        print('human wins')\n",
+    "        print('player wins')\n",
     "    elif combatOutcome ==1:\n",
     "        print('machine wins')\n",
     "    \n",
