--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -149,7 +149,7 @@
     "gameNum = 1\n",
     "\n",
     "\n",
-    "while (gameNum <= maxGames) and ((machineWins < gamesToWin) and (playerWins < gamesToWin)):\n",
+    "while (gameNum <= maxGames) and (machineWins < gamesToWin) and (playerWins < gamesToWin):\n",
     "    print('\\n')\n",
     "    playerMove = playerChoice(options)\n",
     "    machineMove = machineChoice(options)\n",
@@ -346,7 +346,7 @@
     "# that accumulate the wins of each participant.\n",
     "gameNum = 1\n",
     "\n",
-    "while (gameNum <= maxGames) and ((machineWins < gamesToWin) and (playerWins < gamesToWin)):\n",
+    "while (gameNum <= maxGames) and (machineWins < gamesToWin) and (playerWins < gamesToWin):\n",
     "    print('\\n')\n",
     "    playerMove = playerChoice(options)\n",
     "    machineMove = machineChoice(options)\n",
