--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail is in the well.\n",
+      "\n",
+      "\n",
+      "*** Day 0 ***\n",
+      "Distance on the day : 30\n",
+      "Distance on the night : 10\n",
+      "\n",
+      "*** Day 1 ***\n",
+      "Distance on the day : 40\n",
+      "Distance on the night : 20\n",
+      "\n",
+      "*** Day 2 ***\n",
+      "Distance on the day : 50\n",
+      "Distance on the night : 30\n",
+      "\n",
+      "*** Day 3 ***\n",
+      "Distance on the day : 60\n",
+      "Distance on the night : 40\n",
+      "\n",
+      "*** Day 4 ***\n",
+      "Distance on the day : 70\n",
+      "Distance on the night : 50\n",
+      "\n",
+      "*** Day 5 ***\n",
+      "Distance on the day : 80\n",
+      "Distance on the night : 60\n",
+      "\n",
+      "*** Day 6 ***\n",
+      "Distance on the day : 90\n",
+      "Distance on the night : 70\n",
+      "\n",
+      "*** Day 7 ***\n",
+      "Distance on the day : 100\n",
+      "Distance on the night : 80\n",
+      "\n",
+      "*** Day 8 ***\n",
+      "Distance on the day : 110\n",
+      "Distance on the night : 90\n",
+      "\n",
+      "*** Day 9 ***\n",
+      "Distance on the day : 120\n",
+      "Distance on the night : 100\n",
+      "\n",
+      "*** Day 10 ***\n",
+      "Distance on the day : 130\n",
+      "\n",
+      "The snail is out the well !\n",
+      "\n",
+      "It takes 11 days to escape from the well.\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "day = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "print(\"The snail is in the well.\\n\")\n",
     "\n",
+    "while accumulated_distance < well_height:\n",
+    "    print(\"\\n*** Day\", day, \"***\")\n",
+    "    accumulated_distance += daily_advance\n",
+    "    print(\"Distance on the day :\", accumulated_distance)\n",
+    "    if accumulated_distance >= well_height:\n",
+    "        \"\"\"exit\"\"\"\n",
+    "    else:\n",
+    "        accumulated_distance -= night_retreat\n",
+    "        print(\"Distance on the night :\", accumulated_distance)\n",
+    "    day += 1\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "print(\"\\nThe snail is out the well !\")\n",
+    "\n",
+    "# Print the result with print('Days =', days)\n",
+    "print(\"\\nIt takes\", day, \"days to escape from the well.\" )"
    ]
   },
   {
@@ -122,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
