--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -1,27 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Duel of sorcerers\n",
-    "You are witnessing an epic battle between two powerful sorcerers: Gandalf and Saruman. Each sorcerer has 10 spells of variable power in their mind and they are going to throw them one after the other. The winner of the duel will be the one who wins more of those clashes between spells. Spells are represented as a list of 10 integers whose value equals the power of the spell.\n",
-    "```\n",
+    "Duel of sorcerers\n",
+    "\n",
+    "You are witnessing an epic battle between two powerful sorcerers: Gandalf\n",
+    "and Saruman. Each sorcerer has 10 spells (sorts) of variable power in their mind and they are going to throw them one after the other. The winner of the duel will be the one who wins more of those clashes between spells. \n",
+    "\n",
+    "Spells are represented as a list of 10 integers whose value equals the power of the spell.\n",
+    "\n",
     "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
     "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
-    "```\n",
+    "\n",
     "For example:\n",
-    "1. The first clash is won by Saruman: 10 against 23, wins 23\n",
-    "2. The second clash wins Saruman: 11 against 66, wins 66\n",
-    "3. etc.\n",
     "\n",
+    "1- The first clash is won by Saruman: 10 against 23, wins 23\n",
+    "2- The second clash wins Saruman: 11 against 66, wins 66\n",
+    "3- etc.\n",
     "\n",
-    "You will create two variables, one for each sorcerer, where the sum of clashes won will be stored. Depending on which variable is greater at the end of the duel, you will show one of the following three results on the screen:\n",
-    "* Gandalf wins\n",
-    "* Saruman wins\n",
-    "* Tie\n",
+    "You will create two variables, one for each sorcerer, where the sum of  clashes won will be stored. Depending on which variable is greater at the end of the duel, you will show one of the following three results on the screen:\n",
     "\n",
-    "<img src=\"images/content_lightning_bolt_big.jpg\" width=\"400\">"
+    "- Gandalf wins\n",
+    "- Saruman wins\n",
+    "- Tie (match nul)"
    ]
   },
   {
@@ -49,27 +52,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "score_gandalf = 0\n",
+    "score_saruman = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** The battle begins ! ***\n",
+      "\n",
+      "Clash n° 1\n",
+      "Score Gandalf : 6\n",
+      "Score Saruman : 5\n",
+      "Clash n° 2\n",
+      "Score Gandalf : 6\n",
+      "Score Saruman : 6\n",
+      "Clash n° 3\n",
+      "Score Gandalf : 7\n",
+      "Score Saruman : 6\n",
+      "Clash n° 4\n",
+      "Score Gandalf : 7\n",
+      "Score Saruman : 7\n",
+      "Clash n° 5\n",
+      "Score Gandalf : 8\n",
+      "Score Saruman : 7\n",
+      "Clash n° 6\n",
+      "Score Gandalf : 9\n",
+      "Score Saruman : 7\n",
+      "Clash n° 7\n",
+      "Score Gandalf : 9\n",
+      "Score Saruman : 8\n",
+      "Clash n° 8\n",
+      "Score Gandalf : 10\n",
+      "Score Saruman : 8\n",
+      "Clash n° 9\n",
+      "Score Gandalf : 11\n",
+      "Score Saruman : 8\n",
+      "Clash n° 10\n",
+      "Score Gandalf : 12\n",
+      "Score Saruman : 8\n",
+      "\n",
+      "*** End of the battle ! ***\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "\n",
+    "print(\"*** The battle begins ! ***\\n\")\n",
+    "\n",
+    "for i in range(0, 10):\n",
+    "    print(\"Clash n°\", i+1)\n",
+    "    if gandalf[i] > saruman[i]:\n",
+    "        score_gandalf += 1\n",
+    "    elif gandalf[i] < saruman[i]:\n",
+    "        score_saruman += 1\n",
+    "    else:\n",
+    "        print(\"Draw\")\n",
+    "    print(\"Score Gandalf :\", score_gandalf)\n",
+    "    print(\"Score Saruman :\", score_saruman)\n",
+    "    \n",
+    "print(\"\\n*** End of the battle ! ***\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf is the winner !\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "if score_gandalf > score_saruman:\n",
+    "    print(\"Gandalf is the winner !\")\n",
+    "elif score_gandalf < score_saruman:\n",
+    "    print(\"Saruman is the winner !\")\n",
+    "else:\n",
+    "    print(\"Tie !\")\n"
    ]
   },
   {
@@ -210,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
