--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -57,45 +57,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An arrow was hit with another one\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
+    "\n",
+    "\n",
+    "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
+    "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "\n",
+    "set_points = set(points)\n",
+    "\n",
+    "if len(set_points)== len(points):\n",
+    "    print(\"There is no arrow hit with another one\")\n",
+    "else:\n",
+    "    print(\"An arrow was hit with another one\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 : 11 \n",
+      "Q2 : 6 \n",
+      "Q3 : 2 \n",
+      "Q4 : 3\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "\"\"\"\n",
+    "Q1 : ++\n",
+    "Q2 : -+\n",
+    "Q3 : --\n",
+    "Q4 : +-\n",
+    "\"\"\"\n",
+    "\n",
+    "quadrant_1 = 0\n",
+    "quadrant_2 = 0\n",
+    "quadrant_3 = 0\n",
+    "quadrant_4 = 0\n",
+    "\n",
+    "for i in range(0, len(points)):\n",
+    "    if points[i][0] > 0 or points[i][0] == 0:#+\n",
+    "        if points[i][1] > 0 or points[i][1] == 0:#++\n",
+    "            quadrant_1 += 1\n",
+    "        else:#+-\n",
+    "            quadrant_4 += 1\n",
+    "    else: #-\n",
+    "        if points[i][1] > 0 or points[i][1] == 0:#-+\n",
+    "            quadrant_2 += 1\n",
+    "        else:#--\n",
+    "            quadrant_3 += 1\n",
+    "    \n",
+    "print(\"Q1 :\", quadrant_1, \"\\nQ2 :\", quadrant_2, \"\\nQ3 :\", quadrant_3, \"\\nQ4 :\", quadrant_4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The closest point to the center is  [0, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
     "# Defining a function that calculates the distance to the center can help.\n",
+    "\n",
+    "def distance(x, y):\n",
+    "    return (x**2+y**2)**0.5\n",
+    "\n",
+    "closest_point = []\n",
+    "min_dist = 0.0\n",
+    "\n",
+    "\n",
+    "for i in range(0, len(points)):\n",
+    "    dist = distance(float(points[i][0]), float(points[i][1]))\n",
+    "    if max_dist > dist:\n",
+    "        max_dist = dist\n",
+    "        closest_point = list(points[i])\n",
+    "    \n",
+    "print(\"The closest point to the center is \", closest_point)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 arrow(s) must be picked up in the forest\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "\n",
+    "rayon = 9/2\n",
+    "forest = 0\n",
+    "\n",
+    "for i in range(0, len(points)):\n",
+    "    if points[i][0] > rayon or points[i][0] < -rayon:\n",
+    "        forest += 1\n",
+    "    elif points[i][1] > rayon or points[i][1] < -rayon:#++\n",
+    "            forest += 1\n",
+    "            \n",
+    "print(forest, \"arrow(s) must be picked up in the forest\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -121,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
