data analytics prework

--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assign 0 to each variable that stores the victories\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "\n",
+    "victories_gandalf = 0\n",
+    "victories_saruman = 0"
    ]
   },
   {
@@ -67,9 +61,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Execution of spell clashes\n",
+    "\n",
+    "for element in range(0, len(gandalf)):\n",
+    "    if gandalf[element] > saruman[element]:\n",
+    "        victories_gandalf += 1\n",
+    "    else:\n",
+    "        victories_saruman += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins with 6 vs. 4 victories.\n"
+     ]
+    }
+   ],
+   "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "\n",
+    "if victories_gandalf == victories_saruman:\n",
+    "    print(\"It's a draw.\")\n",
+    "elif victories_gandalf > victories_saruman:\n",
+    "    print(\"Gandalf wins with\", victories_gandalf, \"vs.\", victories_saruman, \"victories.\")\n",
+    "else:\n",
+    "    print(\"Saruman wins with\", victories_saruman, \"vs.\", victories_gandalf, \"victories.\")"
    ]
   },
   {
@@ -116,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,56 +157,142 @@
     "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
     "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
     "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
-    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']"
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "\n",
+    "victories_gandalf = 0\n",
+    "victories_saruman = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of wins three times in a row of Gandalf:  0\n",
+      "Number of wins three times in a row of Saruman:  0\n",
+      "It's a draw.\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
     "\n",
     "# Execution of spell clashes\n",
     "\n",
-    "\n",
+    "for element in range(0, len(gandalf)):\n",
+    "    \n",
+    "    if POWER[gandalf[element]] > POWER[saruman[element]]:\n",
+    "        victories_gandalf += 1\n",
+    "    else:\n",
+    "        victories_saruman += 1\n",
     "\n",
     "# check for 3 wins in a row\n",
     "\n",
+    "count_gandalf = 0\n",
     "\n",
-    "# check the winner\n"
+    "for element in range(0, len(gandalf)-2):\n",
+    "\n",
+    "    if POWER[gandalf[element]] > POWER[saruman[element]] and POWER[gandalf[element + 1]] > POWER[saruman[element + 1]] and POWER[gandalf[element + 2]] > POWER[saruman[element + 2]]:\n",
+    "        count_gandalf += 1\n",
+    "    else:\n",
+    "        count_gandalf += 0\n",
+    "\n",
+    "print(\"Number of wins three times in a row of Gandalf: \", count_gandalf)\n",
+    "\n",
+    "count_saruman = 0\n",
+    "\n",
+    "for element in range(0, len(saruman)-2):\n",
+    "\n",
+    "    if POWER[saruman[element]] > POWER[gandalf[element]] and POWER[saruman[element + 1]] > POWER[gandalf[element + 1]] and POWER[saruman[element + 2]] > POWER[gandalf[element + 2]]:\n",
+    "        count_saruman += 1\n",
+    "    else:\n",
+    "        count_saruman += 0\n",
+    "        \n",
+    "print(\"Number of wins three times in a row of Saruman: \", count_saruman)      \n",
+    "\n",
+    "\n",
+    "# check the winner\n",
+    "\n",
+    "if count_gandalf == count_saruman:\n",
+    "    print(\"It's a draw.\")\n",
+    "elif count_gandalf > count_saruman:\n",
+    "    print(\"Gandalf wins with\", count_gandalf, \"vs.\", count_saruman, \"victories.\")\n",
+    "else:\n",
+    "    print(\"Saruman wins with\", count_saruman, \"vs.\", count_gandalf, \"victories.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of Gandalf's spell list: 35\n",
+      "Average of Saruman's spell list: 30.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "\n",
+    "from statistics import mean\n",
+    "\n",
+    "list_numbers_gandalf = []\n",
+    "\n",
+    "for element in range(0, len(gandalf)):\n",
+    "    list_numbers_gandalf.append(POWER[gandalf[element]])\n",
+    "\n",
+    "print(\"Average of Gandalf's spell list:\", mean(list_numbers_gandalf))\n",
+    "\n",
+    "\n",
+    "list_numbers_saruman = []\n",
+    "\n",
+    "for element in range(0, len(gandalf)):\n",
+    "    list_numbers_saruman.append(POWER[saruman[element]])\n",
+    "\n",
+    "print(\"Average of Saruman's spell list:\", mean(list_numbers_saruman))\n",
+    "\n",
+    "#print(\"The snake's average daily progress is\", round(mean(daily_total),2), \"cm.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average of Gandalf's spell list: 17\n",
+      "Average of Saruman's spell list: 16\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "\n",
+    "from statistics import stdev\n",
+    "\n",
+    "print(\"Average of Gandalf's spell list:\", int(stdev(list_numbers_gandalf)))\n",
+    "print(\"Average of Saruman's spell list:\", int(stdev(list_numbers_saruman)))"
    ]
   },
   {
@@ -210,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
