--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,48 +25,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please pick 'stone', 'paper', or 'scissors': stone\n",
+      "Machine wins.\n",
+      "Choice Machine:  paper\n",
+      "Choice Player:  stone\n",
+      "Games played (not including ties): 1\n",
+      "Wins machine: 1\n",
+      "Wins player: 0\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "No one wins, machine and player picked the same.\n",
+      "Choice Machine:  paper\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 1\n",
+      "Wins machine: 1\n",
+      "Wins player: 0\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "No one wins, machine and player picked the same.\n",
+      "Choice Machine:  paper\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 1\n",
+      "Wins machine: 1\n",
+      "Wins player: 0\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "Machine wins.\n",
+      "Choice Machine:  scissors\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 2\n",
+      "Wins machine: 2\n",
+      "Wins player: 0\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "Player wins.\n",
+      "Choice Machine:  stone\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 3\n",
+      "Wins machine: 2\n",
+      "Wins player: 1\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "Player wins.\n",
+      "Choice Machine:  stone\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 4\n",
+      "Wins machine: 2\n",
+      "Wins player: 2\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "No one wins, machine and player picked the same.\n",
+      "Choice Machine:  paper\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 4\n",
+      "Wins machine: 2\n",
+      "Wins player: 2\n",
+      "Please pick 'stone', 'paper', or 'scissors': paper\n",
+      "Machine wins.\n",
+      "Choice Machine:  scissors\n",
+      "Choice Player:  paper\n",
+      "Games played (not including ties): 5\n",
+      "Wins machine: 3\n",
+      "Wins player: 2\n",
+      "Machine wins the set.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
     "\n",
+    "from random import choice\n",
+    "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
     "\n",
+    "options = [\"stone\", \"paper\", \"scissors\"]\n",
+    "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "\n",
+    "max_games = 5 # variable not used\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
+    "number_to_win = round(((max_games + 1) / 2))\n",
+    "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
+    "def choice_options(list):\n",
+    "    return random.choice(list)\n",
+    "    \n",
+    "#########machine = choice_options(options)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
     "\n",
+    "def player_choice():\n",
+    "    global pick\n",
+    "    while pick != \"stone\" or pick != \"paper\" or pick != \"scissors\":\n",
+    "        pick = input(\"Please pick 'stone', 'paper', or 'scissors': \")\n",
+    "        if pick == \"stone\" or pick == \"paper\" or pick == \"scissors\":\n",
+    "            break\n",
+    "            \n",
+    "#########player_choice()\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "\n",
+    "wins_player = 0\n",
+    "wins_machine = 0\n",
+    "number_games = 0\n",
+    "\n",
+    "def play():\n",
+    "\n",
+    "    if machine == pick:\n",
+    "        #print(\"Players made the same choices.\")\n",
+    "        return 0\n",
+    "    elif machine == \"stone\":\n",
+    "        if pick == \"paper\":\n",
+    "            #print(\"Player wins.\")\n",
+    "            return 2\n",
+    "        else:\n",
+    "            #print(\"Machine wins.\")\n",
+    "            return 1\n",
+    "    elif machine == \"paper\":\n",
+    "        if pick == \"stone\":\n",
+    "            #print(\"Machine wins.\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            #print(\"Player wins.\")\n",
+    "            return 2\n",
+    "    elif machine == \"scissors\":\n",
+    "        if pick == \"stone\":\n",
+    "            #print(\"Player wins.\")\n",
+    "            return 2\n",
+    "        else:\n",
+    "            #print(\"Machine wins.\")\n",
+    "            return 1      \n",
+    "            \n",
+    "#########play()\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
-    "    \n",
-    "# Create two variables that accumulate the wins of each participant\n",
+    "counter_games = 0\n",
+    "counter_machine = 0\n",
+    "counter_player = 0\n",
     "\n",
+    "def show_choices_state():\n",
+    "    \n",
+    "    if play() == 1:\n",
+    "        print(\"Machine wins.\")\n",
+    "        global counter_games\n",
+    "        counter_games += 1\n",
+    "        global counter_machine\n",
+    "        counter_machine += 1\n",
+    "    elif play() == 2:\n",
+    "        print(\"Player wins.\")\n",
+    "        counter_games += 1\n",
+    "        global counter_player\n",
+    "        counter_player += 1\n",
+    "    else:\n",
+    "        print(\"No one wins, machine and player picked the same.\")\n",
+    "\n",
+    "    print(\"Choice Machine: \", machine)\n",
+    "    print(\"Choice Player: \", pick)\n",
+    "    print(\"Games played (not including ties):\", counter_games)\n",
+    "    print(\"Wins machine:\", counter_machine)\n",
+    "    print(\"Wins player:\", counter_player)   \n",
+    "    \n",
+    "#########show_choices_state()\n",
+    "\n",
+    "# Create two variables that accumulate the wins of each participant\n",
+    "# Please see above.\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
-    "\n",
+    "while True:\n",
     "    \n",
+    "    if counter_player < number_to_win and counter_machine < number_to_win:\n",
+    "        machine = choice_options(options)\n",
+    "        player_choice()\n",
+    "        play()\n",
+    "        show_choices_state()\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
+    "\n",
+    "if counter_player > counter_machine:\n",
+    "    print(\"Player wins the set.\")\n",
+    "else:\n",
+    "    print(\"Machine wins the set.\")\n",
     "  "
    ]
   },
@@ -93,58 +249,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter an odd number for the number of games to play: 5\n",
+      "Number to win:  3\n",
+      "Please pick 'stone', 'paper', 'scissors', 'lizard', or 'spock': paper\n",
+      "Machine wins.\n",
+      "Choice Machine (Player 1):  scissors\n",
+      "Choice Player (Player 2):  paper\n",
+      "Games played (not including ties): 1\n",
+      "Wins machine: 1\n",
+      "Wins player: 0\n",
+      "Please pick 'stone', 'paper', 'scissors', 'lizard', or 'spock': paper\n",
+      "Player wins.\n",
+      "Choice Machine (Player 1):  spock\n",
+      "Choice Player (Player 2):  paper\n",
+      "Games played (not including ties): 2\n",
+      "Wins machine: 1\n",
+      "Wins player: 1\n",
+      "Please pick 'stone', 'paper', 'scissors', 'lizard', or 'spock': stone\n",
+      "Machine wins.\n",
+      "Choice Machine (Player 1):  spock\n",
+      "Choice Player (Player 2):  stone\n",
+      "Games played (not including ties): 3\n",
+      "Wins machine: 2\n",
+      "Wins player: 1\n",
+      "Please pick 'stone', 'paper', 'scissors', 'lizard', or 'spock': spock\n",
+      "Machine wins.\n",
+      "Choice Machine (Player 1):  paper\n",
+      "Choice Player (Player 2):  spock\n",
+      "Games played (not including ties): 4\n",
+      "Wins machine: 3\n",
+      "Wins player: 1\n",
+      "Machine wins.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "\n",
+    "from random import choice\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
     "\n",
-    "\n",
+    "odd_number = 0        \n",
+    "    \n",
+    "def number():\n",
+    "    global odd_number\n",
+    "    while odd_number % 2 == 0:\n",
+    "        odd_number = int(input(\"Please enter an odd number for the number of games to play: \"))\n",
+    "        #print(odd_number)\n",
+    "    return odd_number\n",
+    "    \n",
+    "#number()\n",
+    "        \n",
     "# Assign a list of 5 possible options.\n",
     "\n",
+    "options = [\"stone\", \"paper\", \"scissors\", \"lizard\", \"spock\"]\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
     "\n",
+    "max_number = number()\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
+    "number_to_win = round((max_number + 1) / 2)\n",
+    "print(\"Number to win: \", number_to_win)\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
+    "def choice_options(list):\n",
+    "    return random.choice(list)\n",
+    "    \n",
+    "machine = choice_options(options)\n",
+    "#print(machine)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
     "\n",
+    "def player_choice():\n",
+    "    global pick\n",
+    "    while pick != \"stone\" or pick != \"paper\" or pick != \"scissors\" or pick != \"lizard\" or pick != \"spock\":\n",
+    "        pick = input(\"Please pick 'stone', 'paper', 'scissors', 'lizard', or 'spock': \")\n",
+    "        if pick == \"stone\" or pick == \"paper\" or pick == \"scissors\" or pick == \"lizard\" or pick == \"spock\":\n",
+    "            break\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
     " \n",
+    "wins_player = 0\n",
+    "wins_machine = 0\n",
+    "number_games = 0\n",
     "\n",
+    "def play():\n",
+    "\n",
+    "    if machine == pick:\n",
+    "        #print(\"Players made the same choices.\")\n",
+    "        return 0\n",
+    "    elif machine == \"stone\":\n",
+    "        if pick == \"paper\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        elif pick ==\"spock\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        else:\n",
+    "            #print(\"Machine wins (Player 1).\")\n",
+    "            return 1\n",
+    "    elif machine == \"paper\":\n",
+    "        if pick == \"stone\":\n",
+    "            #print(\"Machine wins (Player 1).\")\n",
+    "            return 1\n",
+    "        elif pick == \"spock\":\n",
+    "            #print(\"Machine wins (Player 1).\")\n",
+    "            return 1\n",
+    "        else:\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "    elif machine == \"scissors\":\n",
+    "        if pick == \"stone\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        elif pick == \"spock\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        else:\n",
+    "            #print(\"Machine wins (Player 1).\")\n",
+    "            return 1  \n",
+    "    elif machine == \"lizard\":\n",
+    "        if pick == \"stone\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        elif pick == \"scissors\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        else:\n",
+    "            #print(\"Machine wins (Player 1).\")\n",
+    "            return 1    \n",
+    "    elif machine == \"spock\":\n",
+    "        if pick == \"paper\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        elif pick == \"lizard\":\n",
+    "            #print(\"Player wins (Player 2).\")\n",
+    "            return 2\n",
+    "        else:\n",
+    "            #print(\"Machine wins (Player 1).\")\n",
+    "            return 1 \n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
-    "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
+    "\n",
+    "counter_games = 0\n",
+    "counter_machine = 0\n",
+    "counter_player = 0\n",
+    "\n",
+    "def show_choices_state():\n",
+    "    \n",
+    "    if play() == 1:\n",
+    "        print(\"Machine wins.\")\n",
+    "        global counter_games\n",
+    "        counter_games += 1\n",
+    "        global counter_machine\n",
+    "        counter_machine += 1\n",
+    "    elif play() == 2:\n",
+    "        print(\"Player wins.\")\n",
+    "        counter_games += 1\n",
+    "        global counter_player\n",
+    "        counter_player += 1\n",
+    "    else:\n",
+    "        print(\"No one wins, machine and player picked the same.\")\n",
+    "\n",
+    "    print(\"Choice Machine (Player 1): \", machine)\n",
+    "    print(\"Choice Player (Player 2): \", pick)\n",
+    "    print(\"Games played (not including ties):\", counter_games)\n",
+    "    print(\"Wins machine:\", counter_machine)\n",
+    "    print(\"Wins player:\", counter_player)   \n",
+    "    \n",
+    "#########show_choices_state()\n",
+    "\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
+    "while True:\n",
     "    \n",
+    "    if counter_player < number_to_win and counter_machine < number_to_win:\n",
+    "        machine = choice_options(options)\n",
+    "        player_choice()\n",
+    "        play()\n",
+    "        show_choices_state()\n",
+    "    else:\n",
+    "        break   \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "\n",
+    "if counter_player > counter_machine:\n",
+    "    print(\"Player wins the set.\")\n",
+    "else:\n",
+    "    print(\"Machine wins the set.\")\n",
+    "  "
    ]
   },
   {
@@ -171,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
