--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -37,48 +37,97 @@
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "\n",
+    "stops = [(3, 0), (4, 2), (5, 1), (3, 4), (15, 9), (3, 7)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 6 stops.\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
+    "\n",
+    "print(\"There are\", len(stops), \"stops.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 9, 8, 14, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "\n",
+    "passenger_numbers = []\n",
+    "passengers = 0\n",
+    "\n",
+    "for stop in stops:\n",
+    "    passengers = passengers + (stop[0] - stop[1])\n",
+    "    passenger_numbers.append(passengers)\n",
+    "\n",
+    "print(passenger_numbers)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum occupation of the bus is 14 people.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "\n",
+    "print(\"The maximum occupation of the bus is\", max(passenger_numbers), \"people.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of passengers:  8\n",
+      "Standard deviation: 3\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "\n",
+    "from statistics import mean\n",
+    "from statistics import stdev\n",
+    "\n",
+    "print(\"Average number of passengers: \",int(mean(passenger_numbers)))\n",
+    "print(\"Standard deviation:\",int(stdev(passenger_numbers)))"
    ]
   },
   {
@@ -105,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
